third_party/move/move-compiler-v2/tests/unit_test/notest/cross_module_members_non_test_function.exp

Diagnostics:
error: unbound module
   ┌─ tests/unit_test/notest/cross_module_members_non_test_function.move:24:9
   │
24 │         A::build_foo()
   │         ^ Unbound module or type alias 'A'
